argocd/manifests/Dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: application-dev
  template:
    metadata:
      labels:
        app: application-dev
    spec:
      containers:
        - name: application-dev
          image: 392493780390.dkr.ecr.ap-southeast-1.amazonaws.com/nodejs-tutorialspoint-kulnaree:latest
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /ready
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /live
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
