argocd/manifests/Dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: application-dev
spec:
  selector:
    app: application-dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
